RESOLVED FIXED291848
[JSC] WasmIPIntSlowPaths return values/exceptions in r0, status in r1
https://bugs.webkit.org/show_bug.cgi?id=291848
Summary [JSC] WasmIPIntSlowPaths return values/exceptions in r0, status in r1
Max Rottenkolber
Reported 2025-04-21 08:59:43 PDT
WasmIPIntSlowPaths return values/exceptions in r0, status in r1
Attachments
EWS
Comment 1 2025-04-24 09:56:31 PDT
Committed 294069@main (9a7661eb5158): <https://commits.webkit.org/294069@main> Reviewed commits have been landed. Closing PR #44335 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2025-04-24 09:57:14 PDT
Note You need to log in before you can comment on or make changes to this bug.