[JSC] In IPInt slowpaths return (<exception value>, SlowPathExceptionTag) as we do in JS https://bugs.webkit.org/show_bug.cgi?id=291848

Reviewed by Daniel Liu.

The changes IPInt slow paths order of return values to match JS.

 - on success: (value, 0)
 - on failure: (exception, SlowPathExceptionTag=1)

On JSVALUE32_64 we can then return:

 - on success: (payload, tag)
 - on failure: (exception, SlowPathExceptionTag=InvalidTag)

We also remove WASM_THROW and use IPINT_THROW with operationCallMayThrow
in call_indirect.

* Source/JavaScriptCore/llint/InPlaceInterpreter.asm:
* Source/JavaScriptCore/llint/InPlaceInterpreter64.asm:
* Source/JavaScriptCore/wasm/WasmIPIntSlowPaths.cpp:
(JSC::IPInt::WASM_IPINT_EXTERN_CPP_DECL):

Canonical link: https://commits.webkit.org/294069@main